sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: not found: value nain1
    if(plusPetit(nain,nain1)){
                      ^